--- a/app/globals.scss
+++ b/app/globals.scss
@@ -6,3 +6,8 @@ body {
   background-color: #fafafa;
   color: black;
 }
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
